<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <data>
                <variable
                    name="line"
                    type="com.github.cta_elevator_alerts_kotlin.domain.Line" />
                <variable
                    name="lineListener"
                    type="com.github.cta_elevator_alerts_kotlin.ui.LineListener" />
        </data>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/card_spacing"
            android:layout_marginTop="@dimen/card_spacing"
            android:layout_marginRight="@dimen/card_spacing"
            android:onClick="@{() -> lineListener.onClick(line)}">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/border_bottom">

                        <ImageView
                            android:id="@+id/img_alert_icon"
                            style="@style/StatusImage"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="0dp"
                            android:layout_marginLeft="0dp"
                            android:contentDescription="@string/content_status"
                            app:statusLine="@{line}"/>

                        <ImageView
                            android:id="@+id/img_train_icon"
                            style="@style/trainIcon"
                            android:layout_centerVertical="true"
                            android:layout_toEndOf="@id/img_alert_icon"
                            android:layout_toRightOf="@+id/img_alert_icon"
                            android:contentDescription="@string/content_description_train_icon"
                            app:lineIcon="@{line}"/>

                        <TextView
                            android:id="@+id/txt_all_lines"
                            style="@style/StationName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@id/img_train_icon"
                            android:layout_toRightOf="@id/img_train_icon"
                            android:layout_centerVertical="true"
                            app:lineText="@{line}"/>

                        <ImageView
                            android:id="@+id/img_right_arrow"
                            style="@style/rightArrow"
                            android:contentDescription="@string/content_description_right_arrow" />
                </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>
</layout>