<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="station"
            type="com.github.cta_elevator_alerts_kotlin.model.Station" />
        <variable
            name="stationListener"
            type="com.github.cta_elevator_alerts_kotlin.adapters.StationListener" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/card_spacing"
        android:layout_marginTop="@dimen/card_spacing"
        android:layout_marginRight="@dimen/card_spacing"
        android:alpha="0.5"
        android:onClick="@{() -> stationListener.onClick(station)}">

        <RelativeLayout
            android:id="@+id/rl_individual_station"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:alpha="0.5">

            <ImageView
                android:id="@+id/station_status_image"
                style="@style/StatusImage"
                android:layout_centerVertical="true"
                android:background="@drawable/status_red"
                android:contentDescription="@string/status"
                app:statusImage="@{station}"/>

            <TextView
                android:id="@+id/station_name_text"
                style="@style/StationName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/station_status_image"
                android:layout_toRightOf="@id/station_status_image"
                android:layout_centerVertical="true"
                app:stationName="@{station}"/>

            <ImageView
                android:id="@+id/img_star_icon"
                android:contentDescription="@string/star_icon"
                style="@style/icon_small_star"
                android:layout_toLeftOf="@id/img_right_arrow"
                android:layout_toStartOf="@id/img_right_arrow" />

            <ImageView
                android:id="@+id/img_right_arrow"
                style="@style/rightArrow"
                android:contentDescription="@string/content_description_right_arrow" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:orientation="horizontal"
                android:layout_below="@+id/station_name_text"
                android:layout_toRightOf="@id/station_status_image"
                android:layout_toEndOf="@+id/station_status_image"
                android:layout_toLeftOf="@id/img_right_arrow"
                android:layout_toStartOf="@id/img_right_arrow"
                android:weightSum="6"
                android:layout_marginTop="6dp">

                <View
                    android:id="@+id/red"
                    style="@style/LineBar"
                    android:background="@color/colorRedLine"
                    app:red="@{station}"/>
                <View
                    android:id="@+id/blue"
                    style="@style/LineBar"
                    android:background="@color/colorBlueLine"
                    app:blue="@{station}"/>
                <View
                    android:id="@+id/brown"
                    style="@style/LineBar"
                    android:background="@color/colorBrownLine"
                    app:brown="@{station}"/>
                <View
                    android:id="@+id/green"
                    style="@style/LineBar"
                    android:background="@color/colorGreenLine"
                    app:green="@{station}"/>
                <View
                    android:id="@+id/orange"
                    style="@style/LineBar"
                    android:background="@color/colorOrangeLine"
                    app:orange="@{station}"/>
                <View
                    android:id="@+id/pink"
                    style="@style/LineBar"
                    android:background="@color/colorPinkLine"
                    app:pink="@{station}"/>
                <View
                    android:id="@+id/purple"
                    style="@style/LineBar"
                    android:background="@color/colorPurpleLine"
                    app:purple="@{station}"/>
                <View
                    android:id="@+id/yellow"
                    style="@style/LineBar"
                    android:background="@color/colorYellowLine"
                    app:yellow="@{station}"/>
            </LinearLayout>
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>